Cropped the main picture in hopes of fixing display issues

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 body {
     position: relative;
     margin-bottom: 30px;
+    overflow-x: hidden;
 }
 
 a {
